...
import pt.isel.pdm.pokerDice.viewModels.login_register.RegisterViewModel

const val CREATE_NAME_INPUT_TAG = "CreateNameInput"
const val CREATE_EMAIL_INPUT_TAG = "CreateEmailInput"
const val CREATE_PASSWORD_INPUT_TAG = "CreatePasswordInput"

const val REGISTER_BUTTON_TAG = "RegisterButton"

const val INVITATION_CODE_INPUT_TAG = "InvitationCodeInput"

@Composable
fun RegisterScreen(
    modifier: Modifier = Modifier,
...
