...
import pt.isel.pdm.pokerDice.R
import pt.isel.pdm.pokerDice.domain.isValidCredentialsData
import pt.isel.pdm.pokerDice.ui.screens.loginViewModelPreview
import pt.isel.pdm.pokerDice.viewModels.login_register.LoginState
import pt.isel.pdm.pokerDice.viewModels.login_register.LoginViewModel

const val OR_DIVIDER_TAG = "OrDividerTag"

@Composable
fun LoginScreen(
    modifier: Modifier = Modifier,
    viewModel: LoginViewModel = viewModel(),
    onNavigateToTitle: () -> Unit,
...
